--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,20 @@
-//
+@tailwind base;
+
+@tailwind components;
+
+
+// custom css
+.bg-blue-gradient {
+    background-image: linear-gradient(to right, #05668D, #157297);
+}
+
+
+.btn {
+    @apply px-4 py-2 font-semibold rounded-lg ;
+}
+
+.btn--main {
+    @apply bg-green-mid text-base;
+}
+
+@tailwind utilities;
