--- a/public/css/app.css
+++ b/public/css/app.css
@@ -619,49 +619,8 @@ video {
   }
 }
 
-body {
-  font-family: "Montserrat", sans-serif;
-}
-
 .bg-blue-gradient {
   background-image: linear-gradient(to right, #05668d, #157297);
-}
-
-.nav .nav-link {
-  padding: 0.75rem;
-  transition-property: all;
-  transition-duration: 200ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-  border-radius: 0.5rem;
-}
-
-.nav .nav-item:hover .nav-link {
-  --bg-opacity: 1;
-  background-color: #00A896;
-  background-color: rgba(0, 168, 150, var(--bg-opacity));
-  --text-opacity: 1;
-  color: #fff;
-  color: rgba(255, 255, 255, var(--text-opacity));
-}
-
-.hd-primary {
-  font-size: 3rem;
-  font-weight: 700;
-}
-
-.hd-secondary {
-  font-size: 2.25rem;
-  font-weight: 700;
-}
-
-.hd-tertiary {
-  font-size: 1.875rem;
-  font-weight: 700;
-}
-
-.hd-quaternary {
-  font-size: 1.5rem;
-  font-weight: 700;
 }
 
 .btn {
@@ -671,14 +630,6 @@ body {
   padding-bottom: 0.5rem;
   font-weight: 600;
   border-radius: 0.5rem;
-  transition-property: box-shadow;
-  transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn:hover {
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  --transform-translate-y: 1.5rem;
 }
 
 .btn--main {
@@ -688,11 +639,32 @@ body {
   font-size: 1rem;
 }
 
-.btn--full {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.875rem;
+}
+
+h4 {
+  font-size: 1.25rem;
+}
+
+p {
+  font-size: 1rem;
+}
+
+h1, h2, h3, h4 {
+  font-weight: 600;
 }
 
 .space-y-0 > :not(template) ~ :not(template){
