--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,55 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 
-// Variables
-@import 'variables';
+@tailwind base;
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@tailwind components;
+
+
+// custom css
+
+.bg-blue-gradient {
+    background-image: linear-gradient(to right, #05668d, #157297);
+}
+
+// * BUTTONS
+.btn {
+    @apply px-4 py-2 font-semibold rounded-lg;
+}
+
+.btn--main {
+    @apply bg-green-mid text-base;
+}
+
+// * TYPO
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+h1 {
+    @apply text-5xl;
+}
+
+h2 {
+    @apply text-4xl;
+}
+
+h3 {
+    @apply text-3xl;
+}
+
+h4 {
+    @apply text-xl;
+}
+
+p {
+    @apply text-base;
+}
+
+h1, h2, h3, h4 {
+    @apply font-semibold;
+}
+
+
+@tailwind utilities;
