--- a/public/css/app.css
+++ b/public/css/app.css
@@ -687,6 +687,7 @@ h1, h2, h3, h4 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
   width: 16rem;
+  margin-bottom: 0.25rem;
 }
 
 .form-input:focus {
@@ -696,6 +697,13 @@ h1, h2, h3, h4 {
   border-color: #00A896;
   border-color: rgba(0, 168, 150, var(--border-opacity));
   border-radius: 0.375rem;
+}
+
+.form-error-message {
+  display: block;
+  --text-opacity: 1;
+  color: #f56565;
+  color: rgba(245, 101, 101, var(--text-opacity));
 }
 
 .space-y-0 > :not(template) ~ :not(template){
