--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,11 +63,15 @@ h1, h2, h3, h4 {
 }
 
 .form-input {
-    @apply border-b-2 border-green-mid py-2 px-1 w-64;
+    @apply border-b-2 border-green-mid py-2 px-1 w-64 mb-1;
 
     &:focus {
         @apply outline-none border-2 border-green-mid rounded-md;
     }
+}
+
+.form-error-message {
+    @apply block text-red-500;
 }
 
 
